Removed headers 2-3, added hobbies llist

--- a/firstpage.html
+++ b/firstpage.html
@@ -5,12 +5,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello! Big Text!</h1>
-    <h2>Hello! Medium Text!</h2>
-    <h3>Hello! Small Text!</h3>
-    <h4>Hello! Smaller Text!</h4>
-    <h5>Hello! Much smaller Text!</h5>
-    <h6>Hello! Smallest Text!</h6>
+    <h1>This is a website!</h1>
+    <br>
+    <h3 style="text-decoration: underline;">Hobbies</h3>
+    <ul>
+        <li>Playing video games</li>
+        <li>Reading</li>
+        <li>yes</li>
+        <li>Netflix</li>
+    </ul>
     <p>This is a paragraph.</p>
     <br>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYtfZRhbGQtq2BapB2MXJfWIO2QriO5Wx3qQ&usqp=CAU" alt="baby yoda">
